--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "mocha": "^10.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.0.1",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
@@ -42,6 +42,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-router-dom": "^4.3.1",
     "reactstrap": "^9.2.1"
   }
 }
